<resources>
    <string name="app_name">HachaniCalcul</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="sex">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>


    <string name="clear">C</string>
    <string name="exponent">^</string>
    <string name="parenthese">()</string>
    <string name="devise">%</string>
    <string name="multupl">*</string>
    <string name="add">+</string>
    <string name="substruct">-</string>
    <string name="plusminus">+/-</string>
    <string name="point">.</string>
    <string name="equal">=</string>
    <string name="zero">0</string>
    <string name="cancel"></string>
    <string name="display">Enter a value</string>



</resources>